Fix feed size starting too high

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 .wrapper{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: min-content 4fr;
+    grid-template-rows: min-content min-content;
     place-items: stretch stretch;
     place-content: stretch stretch;
     background-color: white;
@@ -79,7 +79,7 @@
     grid-template-rows: repeat(2, min-content);
     grid-template-columns: repeat(2, 1fr);
     padding: 20px;
-    gap: 5px;
+    gap: 15px;
     place-content: center stretch;
     place-items: center stretch;
 }
@@ -126,7 +126,7 @@
 .user{
     display: flex;
     place-items: center;
-    place-content: center;
+    place-content: flex-start;
     gap: 20px;
 }
 
@@ -143,7 +143,7 @@
 
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, min-content);
 }
 
 .articles{
